# anchorage

./: .gitignore  Cargo.toml  README.md  TODO.md  cargo  example_config.yaml  justfile
.github/workflows/: rust.yml
doc/: 2023_08_20.concepts.md
src/: blob.rs  chunk.rs  error.rs  lib.rs  storage.rs
src/blobserver/: client.rs  mod.rs  server.rs  service.rs
src/server/: blob.rs  mod.rs
src/storage/: local.rs  mod.rs
