[package]
name = "anchorage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "anchoraged"

[[bin]]
name = "anc"

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
base64 = "0.21.2"
clap = "4.3.1"
hex-literal = "0.4.1"
hyper = "0.14.27"
openssl = "0.10.54"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.21"
sha256 = "1.1.4"
tempfile = "3.6.0"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.1", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
uuid = { version = "1.4.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
